<resources>
    <string name="app_name">Weather Application</string>
    <string name="defaultLocation">Hong Kong</string>
    <string name="maxTemp">Max</string>
    <string name="minTemp">Min</string>
    <string name="sunset">sunset</string>
    <string name="sunrise">sunrise</string>
    <string name="weatherForecast">Weather forecast</string>
    <string name="outlookTitle">Outlook:</string>
    <string name="localWeatherForecast">Local Weather Forecast</string>
    <string name="nineDayWeatherForecast">9-day Weather Forecast</string>
    <string name="currentWeatherReport">Current Weather Report</string>
    <string name="currentWeather">Current Weather</string>
    <string name="convertto">Convert to:</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="input">Input:</string>
    <string name="result">Result:</string>
    <string name="convert">Convert</string>
    <string name="hint">Enter temperature here</string>
    <string name="temperatureConverter">Temperature Converter</string>
    <string name="otherCountryWeather">Other Country Weather</string>
    <string name="RainfallInThePastHourFromAutomaticWeatherStation">Rainfall in The Past Hour from Automatic Weather Station</string>
    <string name="weatherDisasterWarningNotification">Notification</string>
    <string name="ThereIsCurrentlyNoDisasterWarningInformation">There is currently no disaster warning information</string>
    <string name="WeatherDisasterWarning">Weather Disaster Warning</string>
</resources>
